# rust-gpu-gmm

./: .gitignore  Cargo.toml  README.md  main.md
cuda-kernel/: Cargo.toml  build.rs
cuda-kernel/src/: lib.rs
data/: README.md
profiler/: README.md  ncu-profile.sh  ncu-quick.sh  nsys-profile.sh
src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs  tensor_defs.rs
